--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,327 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                />
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="25dp"/>
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="10dp"
+                android:background="#f5f6f7"/>
+        </LinearLayout>
+
+    </ScrollView>
 
     <com.wtcrmandroid.view.custompricing.TitleBar
         android:id="@+id/titlebar"
         android:layout_width="match_parent"
         android:layout_height="45dp" />
-
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/titlebar">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="#ffffff"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:background="#f5f6f7"
-                android:gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:text="OA办公"
-                android:textColor="#939699"
-                android:textSize="13dp" />
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="25dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:stretchColumns="0">
-
-                <TableRow android:paddingTop="25dp">
-
-                    <TextView
-                        android:id="@+id/tv_log_management"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_log_management"
-                        android:gravity="center"
-                        android:text="日志管理"
-                        android:textSize="15dp" />
-
-                    <RelativeLayout
-
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_notice_announcement"
-                            android:gravity="center"
-                            android:text="通知公告"
-                            android:textSize="15dp" />
-                    </RelativeLayout>
-
-                    <TextView
-                        android:id="@+id/tv_document_process"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_document_processing"
-                        android:gravity="center"
-                        android:text="公文审批"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:id="@+id/tv_field"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_field"
-                        android:gravity="center"
-                        android:text="外勤"
-                        android:textSize="15dp" />
-
-                </TableRow>
-
-                <TableRow android:paddingTop="25dp">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_meeting_room_reservation"
-                        android:gravity="center"
-                        android:text="会议室预约"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_employees_management"
-                        android:gravity="center"
-                        android:text="员工管理"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                </TableRow>
-
-            </TableLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:background="#f5f6f7"
-                android:gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:text="CRM营销"
-                android:textColor="#939699"
-                android:textSize="13dp" />
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="25dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:stretchColumns="0">
-
-                <TableRow android:paddingTop="25dp">
-
-                    <RelativeLayout
-                        android:id="@+id/rl_battlefield_report"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_war_news"
-                            android:gravity="center"
-                            android:text="战报"
-                            android:textSize="15dp" />
-                    </RelativeLayout>
-
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_scan"
-                        android:gravity="center"
-                        android:text="扫一扫"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:id="@+id/tv_pullintocustomer"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_enter_customer"
-                        android:gravity="center"
-                        android:text="录入客户"
-                        android:textSize="15dp" />
-
-                    <RelativeLayout
-                        android:id="@+id/rl_main_client_library"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_main_customer_library"
-                            android:gravity="center"
-                            android:text="主客户库"
-                            android:textSize="15dp" />
-                    </RelativeLayout>
-
-                </TableRow>
-
-                <TableRow android:paddingTop="25dp">
-
-                    <RelativeLayout
-                        android:id="@+id/rl_my_client_library"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_my_customer_library"
-                            android:gravity="center"
-                            android:text="我的客户库"
-                            android:textSize="15dp" />
-                    </RelativeLayout>
-
-                    <RelativeLayout
-                        android:id="@+id/rl_public_sea"
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1">
-
-                        <TextView
-                            android:layout_width="match_parent"
-                            android:layout_height="match_parent"
-                            android:drawablePadding="10dp"
-                            android:drawableTop="@mipmap/ic_home_continue_to_single_high_seas"
-                            android:gravity="center"
-                            android:text="续单公海"
-                            android:textSize="15dp" />
-                    </RelativeLayout>
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                </TableRow>
-
-            </TableLayout>
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="38dp"
-                android:background="#f5f6f7"
-                android:gravity="center_vertical"
-                android:paddingLeft="10dp"
-                android:paddingTop="5dp"
-                android:text="其他"
-                android:textColor="#939699"
-                android:textSize="13dp" />
-
-            <TableLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:paddingBottom="25dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp"
-                android:stretchColumns="0">
-
-                <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:paddingTop="25dp">
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_product_advice"
-                        android:gravity="center"
-                        android:text="产品建议"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:drawablePadding="10dp"
-                        android:drawableTop="@mipmap/ic_home_article_secret"
-                        android:gravity="center"
-                        android:text="密条"
-                        android:textSize="15dp" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:visibility="invisible" />
-
-                </TableRow>
-
-            </TableLayout>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="20dp"
-                android:background="#f5f6f7" />
-        </LinearLayout>
-
-    </ScrollView>
-
 
 </RelativeLayout>
