--- a/app/src/main/res/layout/activity_field_clock.xml
+++ b/app/src/main/res/layout/activity_field_clock.xml
@@ -18,8 +18,14 @@
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:layout_weight="1"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="5dp"/>
-
+    <com.wtcrmandroid.view.custompricing.WaveRipView
+        android:id="@+id/bt_clock"
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:layout_gravity="center_horizontal"
+        />
 </LinearLayout>
