--- a/app/src/main/res/layout/frgment_batlefield_report.xml
+++ b/app/src/main/res/layout/frgment_batlefield_report.xml
@@ -56,6 +56,5 @@
     <android.support.v4.view.ViewPager
         android:id="@+id/viewpager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="10dp" />
+        android:layout_height="match_parent" />
 </LinearLayout>
