--- a/app/src/main/res/layout/item_my_call_record.xml
+++ b/app/src/main/res/layout/item_my_call_record.xml
@@ -7,7 +7,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="10dp"
-        android:background="#e9edf2" />
+        android:background="#F5F6F7" />
 
     <LinearLayout
         android:id="@+id/ll_company_name"
@@ -102,6 +102,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/ll_image"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
@@ -110,12 +111,14 @@
         android:paddingBottom="15dp">
 
         <com.wtcrmandroid.view.custompricing.SquareImageView
+            android:id="@+id/siv_one"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_weight="1"
             android:background="@mipmap/ic_photo_upload" />
 
         <com.wtcrmandroid.view.custompricing.SquareImageView
+            android:id="@+id/siv_two"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
@@ -123,18 +126,21 @@
             android:background="@mipmap/ic_photo_upload" />
 
         <com.wtcrmandroid.view.custompricing.SquareImageView
+            android:id="@+id/siv_three"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:layout_weight="1" />
 
         <com.wtcrmandroid.view.custompricing.SquareImageView
+            android:id="@+id/siv_four"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
             android:layout_weight="1" />
 
         <com.wtcrmandroid.view.custompricing.SquareImageView
+            android:id="@+id/siv_five"
             android:layout_width="0dp"
             android:layout_height="50dp"
             android:layout_marginLeft="10dp"
