销售日志完善

--- a/app/src/main/res/layout/fragment_depart_xsdayjournal.xml
+++ b/app/src/main/res/layout/fragment_depart_xsdayjournal.xml
@@ -164,8 +164,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp" />
 
                     </LinearLayout>
 
@@ -193,8 +192,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp"/>
 
                     </LinearLayout>
 
@@ -222,8 +220,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp"/>
 
                     </LinearLayout>
 
@@ -250,8 +247,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp" />
 
                     </LinearLayout>
 
@@ -288,8 +284,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp"/>
 
                     </LinearLayout>
 
@@ -317,8 +312,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp"/>
 
                     </LinearLayout>
 
@@ -346,8 +340,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text="3"/>
+                            android:paddingTop="10dp"/>
 
                     </LinearLayout>
 
@@ -373,8 +366,7 @@
                             android:layout_height="wrap_content"
                             android:layout_gravity="center"
                             android:paddingBottom="10dp"
-                            android:paddingTop="10dp"
-                            android:text=""/>
+                            android:paddingTop="10dp" />
 
                     </LinearLayout>
 
@@ -441,14 +433,14 @@
 
     <TextView
         android:id="@+id/tv_write_comment"
+        android:padding="15dp"
         android:layout_width="match_parent"
-        android:layout_height="55dp"
-        android:background="@color/white"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
         android:layout_alignParentBottom="true"
-        android:gravity="center_vertical"
-        android:paddingLeft="10dp"
+        android:gravity="center"
         android:text="写评价"
-        style="@style/HintText"/>
+        android:textColor="@color/white"/>
 
 
 </LinearLayout>
