--- a/app/src/main/res/layout/activity_battlefield_report.xml
+++ b/app/src/main/res/layout/activity_battlefield_report.xml
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="10dp"
-                android:background="@mipmap/ic_arrow_down" />
+                android:background="@mipmap/ic_arrow_down_white" />
         </LinearLayout>
     </RelativeLayout>
 
